# ecommerce_returns

./: .gitignore  README.md  pyproject.toml
EDA/: data_preprocessing_v1_for_reference.ipynb  initial_EDA.twbx
notebooks/: data_preprocessing.ipynb  dimensionality_reduction.ipynb  modelling.ipynb
