[tool.poetry]
name = "ecommerce-returns"
version = "0.1.0"
description = ""
authors = ["xavsant <xavierboons2021@economics.smu.edu.sg>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
xgboost = "^2.1.1"
tqdm = "^4.66.5"
scikit-learn = "^1.5.1"
umap = "^0.1.1"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
